plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

javafx {
    version = '23'
    modules = ['javafx.controls', 'javafx.fxml']
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.code.gson:gson:2.11.0'
    implementation 'org.openjfx:javafx-controls:23.0.1'
    implementation 'org.openjfx:javafx-fxml:23.0.1'
    implementation 'org.openjfx:javafx-base:23.0.1'
    implementation 'org.openjfx:javafx-graphics:23.0.1'
    implementation 'org.openjfx:javafx-swing:23.0.1'
    implementation 'org.openjfx:javafx-media:23.0.1'
    implementation 'org.openjfx:javafx-web:23.0.1'
    implementation 'org.openjfx:javafx:23.0.1'
    implementation 'org.junit.jupiter:junit-jupiter:5.10.0'
    implementation 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
    implementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
    implementation 'org.junit.jupiter:junit-jupiter-params:5.10.0'
    implementation 'org.junit.platform:junit-platform-engine:1.10.0'
    implementation 'org.junit.platform:junit-platform-commons:1.10.0'
    implementation 'org.testfx:testfx-core:4.0.18'
    implementation 'org.testfx:testfx-junit:4.0.18'
    implementation 'org.opentest4j:opentest4j:1.3.0'
    implementation 'org.apiguardian:apiguardian-api:1.1.2'
}

application {
    mainClass = 'ui.JavaFXInterface'
}

tasks.run {
    jvmArgs = [
            '--module-path', classpath.asPath,
            '--add-modules', 'javafx.controls,javafx.fxml'
    ]
}

tasks.test {
    useJUnitPlatform()
    jvmArgs = [
            '--module-path', classpath.asPath,
            '--add-modules', 'javafx.controls,javafx.fxml'
    ]
}
